--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,22 @@
   padding: 0;
 }
 
+/* global font styles */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Tungsten;
+}
+p {
+  font-family: Chaparral;
+}
+a {
+  font-family: Tungsten;
+}
+
 /* body style for index page */
 #index {
   background: #000;
@@ -57,7 +73,6 @@
   color: #fff;
   font-size: 6.25rem;
   text-decoration: none;
-  font-family: Tungsten;
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
@@ -82,6 +97,7 @@
 
 .image-array {
   width: 100%;
+  min-height: 100vh;
   object-fit: cover;
   overflow: hidden;
   display: none;
@@ -106,13 +122,11 @@
   font-stretch: normal;
   line-height: normal;
   letter-spacing: 1px;
-  font-family: Tungsten;
   text-transform: uppercase;
   margin-bottom: 13px;
 }
 
 .fullscreen-landing p {
-  font-family: Chaparral;
   font-size: 1.6875rem;
   font-weight: 300;
   font-style: normal;
@@ -131,12 +145,24 @@
   letter-spacing: normal;
   text-transform: uppercase;
   cursor: pointer;
-  font-family: Tungsten;
 }
 
 /* adds class when menu open to blur landing content */
 .fullscreen-landing-blur {
   filter: blur(13px);
+}
+/* mobile style for index page */
+.fullscreen-landing {
+  /* height: auto; */
+}
+.fullscreen-landing h1 {
+  font-size: 1.3rem;
+}
+.fullscreen-landing p {
+  font-size: 1.4rem;
+}
+.fullscreen-landing h2 {
+  font-size: 5rem;
 }
 
 /* styles for case study page */
@@ -144,7 +170,6 @@
 /* body style for case study page */
 .case-study {
   background: #161616;
-  font-family: Tungsten;
 }
 
 .case-study header {
@@ -154,6 +179,13 @@
   background-size: cover;
   display: flex;
 }
+/* remove background attachment for mobile */
+@media (min-width: 992px) {
+  .case-study header {
+    background-attachment: fixed;
+  }
+}
+
 .case-study .header-content {
   max-width: 662px;
 }
@@ -211,7 +243,6 @@
   font-stretch: normal;
   line-height: 1.48;
   letter-spacing: normal;
-  font-family: Chaparral;
   color: #fff;
   max-width: 877px;
   margin-bottom: 60px;
@@ -273,5 +304,112 @@
   line-height: normal;
   letter-spacing: 2px;
   text-align: center;
+  margin-bottom: 80px;
+}
+
+/* about page styles */
+.about {
+  background: #161616;
+}
+.about header {
+  display: flex;
+  justify-content: center;
+  background: #f9f9f9;
+  padding-top: 3px;
+}
+
+.about header img {
+  width: 100%;
+  max-width: 591px /* CHANGE WIDTH FOR NON PLACEHOLDER PIC */;
+  object-fit: cover;
+}
+.about .about-info {
+  width: 80%;
+  margin: auto;
+  max-width: 877px;
+  padding: 100px 0;
+}
+.about .about-info h1 {
+  color: #9e673e;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 2px;
+}
+
+.about .about-info p {
+  color: #fff;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.48;
+  letter-spacing: normal;
+  font-size: 1.6875rem;
+  margin-bottom: 30px;
+}
+
+.about .jobs {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 50px;
+}
+.about .jobs .job {
+  min-width: 427px;
+}
+.about .jobs .job span {
+  font-family: Chaparral;
+  font-size: 0.875rem;
+  color: #fff;
+  font-weight: normal;
+  font-style: italic;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  margin-bottom: 2px;
+}
+
+.about .jobs .job h2 {
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #fff;
+  margin-bottom: 39px;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+
+.about footer {
+  background: #000;
+  padding: 60px 0;
+}
+.about footer .footer-content {
+  display: flex;
+  flex-direction: column;
+  max-width: 877px;
+  margin: auto;
+}
+
+.about footer .footer-content a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 4.5rem;
+  text-align: center;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.04;
+  letter-spacing: normal;
+  text-transform: uppercase;
+}
+
+.about footer .footer-content a:nth-of-type(1) {
+  font-size: 1.5rem;
+  color: #9e673e;
   margin-bottom: 80px;
 }
