--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,8 @@ a {
   display: none;
   align-items: flex-end;
   z-index: 2;
+  /* max-width: 1400px;
+  margin: auto; */
 }
 
 .menu-popup .menu-popup-content {
@@ -58,15 +60,26 @@ a {
   width: 90%;
   margin: 0 auto;
   margin-bottom: 4vh;
+  /* max-width: 1400px; */
+}
+@media (min-width: 2000px) {
+  .menu-popup {
+    align-items: center;
+  }
 }
 
 .menu-popup .gesture-emoji {
   position: absolute;
-  right: 50px;
-  top: 50px;
+  right: 5%;
+  top: 5%;
   width: 100px;
   height: 100px;
   cursor: pointer;
+  transition: 300ms;
+}
+.menu-popup .gesture-emoji:hover {
+  transform: scale(1.1);
+  transition: 300ms;
 }
 
 .menu-popup a {
@@ -563,5 +576,30 @@ a {
   .about .jobs .job {
     /* min-width: 427px; */
     width: 100%;
+  }
+}
+
+/* mobile styles for menu popup */
+@media (max-width: 800px) {
+  .menu-popup {
+    align-items: center;
+  }
+  .menu-popup a {
+    font-size: 5rem;
+  }
+}
+
+@media (max-width: 520px) {
+  .menu-popup a {
+    font-size: 4rem;
+    display: inline;
+  }
+  .menu-popup .gesture-emoji {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
   }
 }
