--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,11 @@ h5,
 h6 {
   font-family: Tungsten;
 }
+
 p {
   font-family: Chaparral;
 }
+
 a {
   font-family: Tungsten;
 }
@@ -62,6 +64,7 @@ a {
   margin-bottom: 4vh;
   /* max-width: 1400px; */
 }
+
 @media (min-width: 2000px) {
   .menu-popup {
     align-items: center;
@@ -77,6 +80,7 @@ a {
   cursor: pointer;
   transition: 300ms;
 }
+
 .gesture-emoji:hover {
   transform: scale(1.1);
   transition: 300ms;
@@ -97,6 +101,7 @@ a {
 .menu-popup a:hover {
   color: #9e673e;
 }
+
 .blur-content {
   filter: blur(14px);
 }
@@ -105,6 +110,7 @@ a {
 .carousel {
   position: relative;
 }
+
 .carousel-content {
   display: flex;
   margin: 150px 0 70px;
@@ -114,11 +120,14 @@ a {
 
 .carousel-content img {
   height: 110vh;
-  width: 100vw;
+  min-width: 100vw;
+  max-width: 100vw;
+  /* object-fit: fill; */
   object-fit: cover;
 
   /* position: absolute; */
 }
+
 .carousel .carousel-control-left {
   position: absolute;
   top: 0;
@@ -128,6 +137,7 @@ a {
   cursor: pointer;
   z-index: 1;
 }
+
 .carousel .carousel-control-right {
   position: absolute;
   top: 0;
@@ -214,6 +224,7 @@ a {
   margin-bottom: 20px !important;
   display: inline-block;
 }
+
 .fullscreen-landing div span a {
   text-decoration: none;
   color: #fff;
@@ -222,6 +233,7 @@ a {
 .fullscreen-landing div span:nth-of-type(1) {
   border-bottom: 2px solid #9e673e;
 }
+
 /* adds class when menu open to blur landing content */
 .fullscreen-landing-blur {
   filter: blur(13px);
@@ -232,23 +244,28 @@ a {
   .fullscreen-landing h1 {
     font-size: 1.3rem;
   }
+
   .fullscreen-landing p {
     font-size: 1.4rem;
     margin-bottom: 30px;
   }
+
   .fullscreen-landing h2 {
     font-size: 5rem;
   }
+
   .fullscreen-landing div span {
     font-size: 5rem;
     margin-right: 15px;
   }
 }
+
 @media (max-width: 620px) {
   .fullscreen-landing div span {
     font-size: 4rem;
     margin-right: 10px;
   }
+
   .fullscreen-landing p {
     margin-bottom: 20px;
   }
@@ -258,10 +275,12 @@ a {
   .fullscreen-landing h1 {
     font-size: 1.2rem;
   }
+
   .fullscreen-landing p {
     font-size: 1.3rem;
     margin-bottom: 30px;
   }
+
   .fullscreen-landing div span {
     font-size: 4rem;
   }
@@ -271,10 +290,12 @@ a {
   .fullscreen-landing h1 {
     font-size: 1.1rem;
   }
+
   .fullscreen-landing p {
     font-size: 1.2rem;
     margin-bottom: 30px;
   }
+
   .fullscreen-landing div span {
     font-size: 3rem;
   }
@@ -284,10 +305,12 @@ a {
   .fullscreen-landing h1 {
     font-size: 1rem;
   }
+
   .fullscreen-landing p {
     font-size: 1.05rem;
     margin-bottom: 30px;
   }
+
   .fullscreen-landing div span {
     font-size: 2rem;
   }
@@ -307,6 +330,7 @@ a {
   background-size: cover;
   display: flex;
 }
+
 /* remove background attachment for mobile */
 @media (min-width: 992px) {
   .case-study header {
@@ -317,6 +341,7 @@ a {
 .case-study .header-content {
   max-width: 662px;
 }
+
 .case-study .header-content h1 {
   font-size: 6.25rem;
   color: #fff;
@@ -326,6 +351,7 @@ a {
   line-height: 1;
   letter-spacing: normal;
 }
+
 .case-study .header-content h2 {
   font-size: 1.5rem;
   color: #03d3d3;
@@ -335,6 +361,7 @@ a {
   line-height: normal;
   letter-spacing: 2px;
 }
+
 .case-study .header-content-wrapper {
   max-width: 1400px;
   margin: 0 auto;
@@ -386,12 +413,14 @@ a {
   height: 60vh;
   object-fit: cover;
 }
+
 .case-study .nba {
   padding: 100px 0;
   max-width: 1400px;
   width: 80%;
   margin: auto;
 }
+
 .case-study .nba img {
   width: 100%;
 }
@@ -401,6 +430,7 @@ a {
   padding: 60px 0 115px;
   background: #000;
 }
+
 .case-study .footer-content {
   width: 80%;
   margin: auto;
@@ -440,18 +470,23 @@ a {
   .case-study .header-content h1 {
     font-size: 5rem;
   }
+
   .case-study .visual-designer {
     padding: 70px 0;
   }
+
   .case-study .visual-designer p {
     margin-bottom: 40px;
   }
+
   .case-study .nba {
     padding: 70px 0;
   }
+
   .case-study footer {
     padding: 40px 0 80px;
   }
+
   .case-study .footer-content a:nth-of-type(1) {
     margin-bottom: 50px;
   }
@@ -461,30 +496,38 @@ a {
   .case-study .header-content-wrapper {
     width: 90%;
   }
+
   .case-study .header-content h1 {
     font-size: 4rem;
   }
+
   .case-study .visual-designer h3 {
     font-size: 1.3rem;
   }
+
   .case-study .visual-designer {
     padding: 50px 0;
     width: 90%;
   }
+
   .case-study .visual-designer p {
     margin-bottom: 30px;
     font-size: 1.45rem;
   }
+
   .case-study .nba {
     padding: 50px 0;
     width: 90%;
   }
+
   .case-study footer {
     padding: 30px 0 60px;
   }
+
   .case-study footer .footer-content {
     width: 90%;
   }
+
   .case-study .footer-content a {
     font-size: 3.5rem;
   }
@@ -495,10 +538,12 @@ a {
     font-size: 3.35rem;
   }
 }
+
 /* about page styles */
 .about {
   background: #161616;
 }
+
 .about header {
   display: flex;
   justify-content: center;
@@ -508,15 +553,19 @@ a {
 
 .about header img {
   width: 100%;
-  max-width: 591px /* CHANGE WIDTH FOR NON PLACEHOLDER PIC */;
+  max-width: 591px
+    /* CHANGE WIDTH FOR NON PLACEHOLDER PIC */
+  ;
   object-fit: cover;
 }
+
 .about .about-info {
   width: 80%;
   margin: auto;
   max-width: 877px;
   padding: 100px 0;
 }
+
 .about .about-info h1 {
   color: #9e673e;
   margin-bottom: 15px;
@@ -546,10 +595,12 @@ a {
   margin-top: 50px;
   /* justify-content: center; */
 }
+
 .about .jobs .job {
   /* min-width: 427px; */
   width: 50%;
 }
+
 .about .jobs .job span {
   font-family: Chaparral;
   font-size: 0.875rem;
@@ -578,6 +629,7 @@ a {
   background: #000;
   padding: 60px 0;
 }
+
 .about footer .footer-content {
   display: flex;
   flex-direction: column;
@@ -624,6 +676,7 @@ a {
   .menu-popup {
     align-items: center;
   }
+
   .menu-popup a {
     font-size: 5rem;
   }
@@ -634,6 +687,7 @@ a {
     font-size: 4rem;
     display: inline;
   }
+
   .menu-popup .gesture-emoji {
     position: absolute;
     right: 30px;
