--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,8 @@ a {
   right: 0;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
   display: none;
-  align-items: flex-end;
+  align-items: center;
   z-index: 2;
-  /* max-width: 1400px;
-  margin: auto; */
 }
 
 .menu-popup .menu-popup-content {
@@ -62,13 +60,6 @@ a {
   width: 90%;
   margin: 0 auto;
   margin-bottom: 4vh;
-  /* max-width: 1400px; */
-}
-
-@media (min-width: 2000px) {
-  .menu-popup {
-    align-items: center;
-  }
 }
 
 .gesture-emoji {
@@ -343,7 +334,7 @@ a {
 }
 
 .case-study header {
-  min-height: 75vh;
+  min-height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url('../img/img-1.jpeg');
   background-size: cover;
@@ -426,12 +417,21 @@ a {
   width: 100%;
 }
 
-/* two people image section  */
-.single-image img {
-  width: 100%;
-  height: 60vh;
+.full-height {
+  min-height: 110vh;
   object-fit: cover;
 }
+
+.full-width {
+  width: 100vw;
+  max-width: 100%;
+  object-fit: cover;
+}
+
+/* two people image section  */
+/* .single-image img {
+  width: 100%;
+} */
 
 .case-study .nba {
   padding: 100px 0;
@@ -445,6 +445,10 @@ a {
 }
 
 /* footer */
+footer {
+  min-height: 100vh;
+}
+
 .case-study footer {
   padding: 60px 0 115px;
   background: #000;
