--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,8 @@ a {
   /* display: inline; */
 }
 
-.carousel-content img {
+.carousel-content img,
+.carousel-content video {
   height: 110vh;
   min-width: 100vw;
   max-width: 100vw;
