--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,18 @@ a {
   display: flex;
   margin: 150px 0 70px;
   transition: 500ms;
-  /* display: inline; */
+}
+
+@media(max-width: 1024px) {
+  .carousel-content {
+    margin: 100px 0 50px;
+  }
+}
+
+@media(max-width: 800px) {
+  .carousel-content {
+    margin: 70px 0 30px;
+  }
 }
 
 .carousel-content img,
@@ -158,10 +169,7 @@ a {
   height: 110vh;
   min-width: 100vw;
   max-width: 100vw;
-  /* object-fit: fill; */
   object-fit: cover;
-
-  /* position: absolute; */
 }
 
 .carousel .carousel-control-left {
@@ -393,6 +401,12 @@ a {
   display: flex;
 }
 
+@media(max-width: 800px) {
+  .case-study header {
+    min-height: 70vh;
+  }
+}
+
 /* remove background attachment for mobile */
 @media (min-width: 992px) {
   .case-study header {
@@ -432,6 +446,21 @@ a {
   align-items: center;
 }
 
+@media(max-width: 800px) {
+  .case-study .header-content-wrapper {
+    align-items: flex-start;
+    margin-top: 18vh;
+  }
+}
+
+@media(max-width: 500px) {
+  .case-study .header-content-wrapper {
+    align-items: flex-start;
+    margin-top: 14vh;
+  }
+}
+
+
 /* visual designer section */
 .case-study .visual-designer {
   padding: 100px 0;
@@ -469,21 +498,25 @@ a {
   width: 100%;
 }
 
+@media(min-width: 1200px) {
+  .full-height {
+    min-height: 110vh;
+    object-fit: cover;
+  }
+
+  .full-width {
+    width: 100vw;
+    max-width: 100%;
+    object-fit: cover;
+  }
+
+}
+
+.full-width,
 .full-height {
-  min-height: 110vh;
-  object-fit: cover;
-}
-
-.full-width {
-  width: 100vw;
   max-width: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
-
-/* two people image section  */
-/* .single-image img {
-  width: 100%;
-} */
 
 .case-study .nba {
   padding: 100px 0;
@@ -499,6 +532,18 @@ a {
 /* footer */
 footer {
   min-height: 100vh;
+}
+
+@media(max-width: 800px) {
+  footer {
+    min-height: 70vh;
+  }
+}
+
+@media(max-width: 500px) {
+  footer {
+    min-height: 50vh;
+  }
 }
 
 .case-study footer {
@@ -527,6 +572,10 @@ footer {
   text-align: center;
   color: #fff;
 
+}
+
+.case-study .footer-content span {
+  text-align: center;
 }
 
 .case-study .footer-content .related {
@@ -605,7 +654,7 @@ footer {
     width: 90%;
   }
 
-  .case-study .footer-content a {
+  .case-study .footer-content span a {
     font-size: 3.5rem;
   }
 }
