--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,22 @@ a {
   object-fit: fill;
 }
 
+@media(max-width: 992px) {
+  .carousel-content img {
+    height: 70vh;
+    object-fit: cover;
+  }
+
+  .carousel-content video {
+    /* min-width: 70vw;
+    max-width: 70vw; */
+    height: 70vh;
+    max-height: 70vh;
+    min-height: 70vh;
+    /* object-fit: fill; */
+  }
+}
+
 .carousel .carousel-control-left {
   position: absolute;
   top: 0;
