--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,19 @@
   padding: 0;
 }
 
+.fullscreen-gradient {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(3, 211, 211, 1) 35%, rgba(0, 212, 255, 1) 100%);
+  z-index: 5;
+}
+
 #test {
   /* height: 100vh;
   width: 100%; */
